fix: long messages out of view

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Barlow', sans-serif;
+    margin: 1em;
 }
 
 #transcriptions {
